expr.ebnf
expression     ::= commaSequence ;

commaSequence  ::= conditional { "," conditional } ;

conditional    ::= equality { "?" commaSequence ":" commaSequence } ;

equality       ::= comparison { ( "!=" | "==" ) comparison } ;

comparison     ::= term { ( ">" | ">=" | "<" | "<=" ) term } ;

term           ::= factor { ( "-" | "+" ) factor } ;

factor         ::= unary { ( "/" | "*" ) unary } ;

unary          ::= ( "!" | "-" ) unary
               | primary ;

primary        ::= NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" ;
